--- a/action.yml
+++ b/action.yml
@@ -97,7 +97,7 @@ runs:
           issue = @{
             owner = "${{ github.event.repository.owner.login }}"
             repo = "${{ github.event.repository.name }}"
-            number = ${{ github.event.issue.number }}
+            number = $issue.number
           },
           labels = @{
               names = $labelsNames
