Improved the backend

--- a/backend/LabeledByAI/LabeledByAI.csproj
+++ b/backend/LabeledByAI/LabeledByAI.csproj
@@ -25,6 +25,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\labeled-by-ai.ServiceDefaults\labeled-by-ai.ServiceDefaults.csproj" />
+    <ProjectReference Include="..\LabeledByAI.Services\LabeledByAI.Services.csproj" />
   </ItemGroup>
 
   <ItemGroup>
