--- a/action.yml
+++ b/action.yml
@@ -111,6 +111,8 @@ runs:
           -ContentType 'application/json' `
           -Headers $headers
 
+        Write-Output "The AI replied with a status of: $($response.Status)"
+
         if (-not $response) {
           Write-Error "Failed to get a response from the AI service."
           Write-Output "::endgroup::"
