--- a/action.yml
+++ b/action.yml
@@ -109,9 +109,10 @@ runs:
           -Uri $uri `
           -Body $body `
           -ContentType 'application/json' `
-          -Headers $headers
+          -Headers $headers `
+          -StatusCodeVariable responseStatusCode
 
-        Write-Output "The AI replied with a status of: $($response.StatusCode)"
+        Write-Output "The AI replied with a status code of: $responseStatusCode"
 
         if (-not $response) {
           Write-Error "Failed to get a response from the AI service."
