--- a/action.yml
+++ b/action.yml
@@ -62,64 +62,57 @@ runs:
           exit 1
         }
         
-        $repoUrl = "${{ github.repositoryUrl }}"
-
-        # Write-Output "::debug::GITHUB_ISSUE: $env:GITHUB_ISSUE"
-        # Write-Output "::debug::GITHUB_ISSUE_DEPRECATED: $env:GITHUB_ISSUE_DEPRECATED"
-        # Write-Output "::debug::issue: $issue"
-
-        Write-Output "Repository URL: $repoUrl"
-        Write-Output "Issue Url: $($issue.html_url)"
-        Write-Output "Issue Title: $($issue.title)"
+        Write-Output "Issue Number:"
+        Write-Output $issue.number
+        Write-Output "Issue Title:"
+        Write-Output $issue.title
         Write-Output "Issue Body:"
-        Write-Output "$($issue.body)"
-        Write-Output "::endgroup::"
+        Write-Output $issue.body
 
-        Write-Output "::group::Loading labels..."
+        Write-Output "Labels:"
         if ($env:LABEL_NAMES) {
           $labelsNames =
             $env:LABEL_NAMES -split '\r|\n' |
             ForEach-Object { $_.Trim() } |
             Where-Object { $_ -ne '' }
+          Write-Output "- Labels:"
+          $labelsNames | ForEach-Object { Write-Output "  - $_" }
         } elseif ($env:LABEL_PATTERN) {
           $labelRegex = "$env:LABEL_PATTERN"
-          $labelSelector = "[.[] | select(.name | test(`"$labelRegex`"))]"
-          $labelsResult = gh label list --repo "$repoUrl" --json name --jq "$labelSelector" --limit 100
-          $labels = $labelsResult | ConvertFrom-Json
-          Write-Output "::debug::$labels"
-          if (-not $labels) {
-            Write-Error "Failed to get labels from the repository."
-            exit 1
-          }
-          $labelsNames = $labels | Select-Object -ExpandProperty name
+          Write-Output "- Pattern:"
+          Write-Output "  $labelRegex"
         }
 
-        Write-Output "Filtered Labels:"
-        Write-Output "$labelsNames"
         Write-Output "::endgroup::"
 
         Write-Output "::group::Asking the AI to find the best label..."
+        $body = ConvertTo-Json -InputObject @{
+          version = 1
+          issue = @{
+            owner = "${{ github.event.repository.owner.login }}"
+            repo = "${{ github.event.repository.name }}"
+            number = $issue.number
+          }
+          labels = @{
+              names = $labelsNames
+              pattern = $labelRegex
+          }
+        }
+
         $hostAddress = "https://labeled-by-ai.yellowhill-0060a70b.southafricanorth.azurecontainerapps.io"
         $uri = "$hostAddress/api/label"
-        $bodyObj = @{
-            title = $issue.title
-            body = $issue.body
-            url = $issue.html_url
-            labels = $labelsNames
+        $headers = @{
+          'X-GitHub-Token' = "$env:GH_TOKEN"
         }
-        $body = $bodyObj | ConvertTo-Json
-
-        # Write-Output "::debug::Request Body:"
-        # Write-Output "::debug::$body"
-
         $response = Invoke-RestMethod `
           -Method Post `
           -Uri $uri `
           -Body $body `
-          -ContentType 'application/json'
+          -ContentType 'application/json' `
+          -Headers $headers `
+          -StatusCodeVariable responseStatusCode
 
-        # Write-Output "::debug::Response:"
-        # Write-Output "::debug::$response"
+        Write-Output "The AI replied with a status code of: $responseStatusCode"
 
         if (-not $response) {
           Write-Error "Failed to get a response from the AI service."
