--- a/backend/Directory.Build.props
+++ b/backend/Directory.Build.props
@@ -1,8 +1,8 @@
 <Project>
 
 	<PropertyGroup Condition="'$(Configuration)' == 'Debug'">
-		<UseLocalAI>true</UseLocalAI>
+		<UseLocalAI>false</UseLocalAI>
 		<DefineConstants Condition="'$(UseLocalAI)' == 'true'">$(DefineConstants);USE_LOCAL_AI</DefineConstants>
 	</PropertyGroup>
-	
+
 </Project>
