--- a/backend/labeled-by-ai.AppHost/labeled-by-ai.AppHost.csproj
+++ b/backend/labeled-by-ai.AppHost/labeled-by-ai.AppHost.csproj
@@ -1,25 +1,29 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <Sdk Name="Aspire.AppHost.Sdk" Version="9.0.0" />
+	<Sdk Name="Aspire.AppHost.Sdk" Version="9.0.0" />
 
-  <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>net9.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-    <IsAspireHost>true</IsAspireHost>
-    <UserSecretsId>2a374c41-1b8f-4545-a85c-102c481b1441</UserSecretsId>
-  </PropertyGroup>
+	<PropertyGroup>
+		<OutputType>Exe</OutputType>
+		<TargetFramework>net9.0</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>enable</Nullable>
+		<IsAspireHost>true</IsAspireHost>
+		<UserSecretsId>2a374c41-1b8f-4545-a85c-102c481b1441</UserSecretsId>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Aspire.Hosting.AppHost" Version="9.0.0" />
-    <PackageReference Include="Aspire.Hosting.Azure.ApplicationInsights" Version="9.0.0" />
-    <PackageReference Include="Aspire.Hosting.Azure.CognitiveServices" Version="9.0.0" />
-    <PackageReference Include="Aspire.Hosting.Azure.Functions" Version="9.0.0-preview.5.24551.3" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Aspire.Hosting.AppHost" Version="9.0.0" />
+		<PackageReference Include="Aspire.Hosting.Azure.ApplicationInsights" Version="9.0.0" />
+		<PackageReference Include="Aspire.Hosting.Azure.CognitiveServices" Version="9.0.0" />
+		<PackageReference Include="Aspire.Hosting.Azure.Functions" Version="9.0.0-preview.5.24551.3" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\LabeledByAI\LabeledByAI.csproj" />
-  </ItemGroup>
+	<ItemGroup Condition="'$(UseLocalAI)' == 'true'">
+		<PackageReference Include="CommunityToolkit.Aspire.Hosting.Ollama" Version="9.0.0" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<ProjectReference Include="..\LabeledByAI\LabeledByAI.csproj" />
+	</ItemGroup>
 
 </Project>
