Use hte correct branches for testing

--- a/.github/workflows/labeler-testing-readonly.yml
+++ b/.github/workflows/labeler-testing-readonly.yml
@@ -3,8 +3,6 @@ name: Local Testing Workflow (Read Only)
 on:
   push:
     branches: 
-      - dev/workflow/testing
-      - dev/action/label-with-ai
       - action/label-with-ai
 
 jobs:
@@ -20,7 +18,7 @@ jobs:
           $issue = Get-Content ".github/workflows/test-data/test-issue.json"
           $issue = $issue | Join-String -Separator " "
           "GITHUB_ISSUE=$issue" >> $env:GITHUB_OUTPUT
-      - uses: mattleibow/dev-tools@dev/action/label-with-ai
+      - uses: mattleibow/dev-tools@action/label-with-ai
         with:
           label-pattern: '^area/.*'
           issue-json: ${{ steps.loader.outputs.GITHUB_ISSUE }} # testing pipeline only
