--- a/.github/workflows/labeler-testing.yml
+++ b/.github/workflows/labeler-testing.yml
@@ -3,8 +3,6 @@ name: Local Testing Workflow (Writeable)
 on:
   push:
     branches: 
-      - dev/workflow/testing
-      - dev/action/label-with-ai
       - action/label-with-ai
 
 jobs:
@@ -22,7 +20,7 @@ jobs:
           $issue = Get-Content ".github/workflows/test-data/test-issue.json"
           $issue = $issue | Join-String -Separator " "
           "GITHUB_ISSUE=$issue" >> $env:GITHUB_OUTPUT
-      - uses: mattleibow/dev-tools@dev/action/label-with-ai
+      - uses: mattleibow/dev-tools@action/label-with-ai
         with:
           labels: |
             area/action
