--- a/action.yml
+++ b/action.yml
@@ -18,17 +18,22 @@ inputs:
   add-comment:
     default: 'true'
     description: 'Whether or not to Write a comment on the issue after applying the label with an explanation.'
-  # inputs to allow for testing purposes
-  issue-json:
-    description: 'The json object of the issue to be labeled.'
-    deprecationMessage: 'This is deprecated and will be removed.'
+  comment-template:
+    description: 'The template to use for the comment on the issue.'
+    default: |
+      The AI has selected the label ``{{LABEL}}`` for this issue
+      and gave the following reason:
+
+      > {{REASON}}
+
+      If this is not correct, you can change the label to the correct one.
 
 outputs:
   label:
-    description: "The label that will be applied to the issue"
+    description: 'The label that will be applied to the issue.'
     value: ${{ steps.get-label.outputs.SELECTED_LABEL }}
   reason:
-    description: "The reasopn for the label being selected"
+    description: 'The reasopn for the label being selected.'
     value: ${{ steps.get-label.outputs.SELECTED_REASON }}
 
 runs:
@@ -39,35 +44,22 @@ runs:
       id: get-label
       shell: pwsh
       env:
-        GH_TOKEN: ${{ github.token }}                       # for the gh CLI tool
-        GITHUB_ISSUE: ${{ toJson(github.event.issue) }}     # the issue json from the event
-        LABEL_NAMES: ${{ inputs.labels }}                   # the exact labels to look through
-        LABEL_PATTERN: ${{ inputs.label-pattern }}          # the label pattern to match
-        GITHUB_ISSUE_DEPRECATED: ${{ inputs.issue-json }}   # testing purposes only
+        GH_TOKEN: ${{ github.token }}
+        ISSUE_NUMBER: ${{ toJson(github.event.issue.number) }}
+        LABEL_NAMES: ${{ inputs.labels }}
+        LABEL_PATTERN: ${{ inputs.label-pattern }}
       run: |
         "Finding the best label using AI.."
 
         Write-Output "::group::Validating inputs..."
-        # Parse the issue json from the event or fall back
-        # to the deprecated method of reading the issue json
-        # from the environment variable
-        $issue = "$env:GITHUB_ISSUE" | ConvertFrom-Json
-        if (-not $issue) {
-          $issue = "$env:GITHUB_ISSUE_DEPRECATED" | ConvertFrom-Json
-        }
 
-        if (-not $issue) {
+        if (-not $env:ISSUE_NUMBER) {
           Write-Error "No issue was found to label."
           Write-Output "::endgroup::"
           exit 1
         }
         
-        Write-Output "Issue Number:"
-        Write-Output $issue.number
-        Write-Output "Issue Title:"
-        Write-Output $issue.title
-        Write-Output "Issue Body:"
-        Write-Output $issue.body
+        Write-Output "Issue Number: " + $env:ISSUE_NUMBER
 
         Write-Output "Labels:"
         if ($env:LABEL_NAMES) {
@@ -91,7 +83,7 @@ runs:
           issue = @{
             owner = "${{ github.event.repository.owner.login }}"
             repo = "${{ github.event.repository.name }}"
-            number = $issue.number
+            number = $env:ISSUE_NUMBER
           }
           labels = @{
               names = $labelsNames
@@ -131,7 +123,7 @@ runs:
         Write-Output "Found a great label to apply to the issue: $($response.label)"
         Write-Output "The reasoning is: $($response.reason)"
 
-        "ISSUE_NUMBER=$($issue.number)" >> $env:GITHUB_OUTPUT
+        "ISSUE_NUMBER=$($env:ISSUE_NUMBER)" >> $env:GITHUB_OUTPUT
         "SELECTED_LABEL=$($response.label)" >> $env:GITHUB_OUTPUT
         "SELECTED_REASON=$($response.reason)" >> $env:GITHUB_OUTPUT
 
@@ -166,6 +158,7 @@ runs:
         ISSUE_NUMBER: ${{ steps.get-label.outputs.ISSUE_NUMBER }}
         SELECTED_LABEL: ${{ steps.get-label.outputs.SELECTED_LABEL }}
         SELECTED_REASON: ${{ steps.get-label.outputs.SELECTED_REASON }}
+        COMMENT_TEMPLATE: ${{ inputs.comment-template }}
       run: |
         "Adding a comment on the issue with a reason for the label.."
 
@@ -176,10 +169,9 @@ runs:
         $label = "$env:SELECTED_LABEL"
         $reason = "$env:SELECTED_REASON"
 
-        $body = 
-          "The AI has selected the label ``$label`` for this issue and gave the following reason: `n`n" +
-          "> $reason `n`n" +
-          "If this is not correct, you can change the label to the correct one."
+        $body = "$env:COMMENT_TEMPLATE" `
+          -replace '{{LABEL}}', $label `
+          -replace '{{REASON}}', $reason
 
         gh issue comment --repo "$repoUrl" $issueNumber --body "$body"
 
