Pass in a token with project access

--- a/.github/workflows/score-testing.yml
+++ b/.github/workflows/score-testing.yml
@@ -11,3 +11,4 @@ jobs:
         with:
           project: 4
           column: 'Engagement Score'
+          project-token: ${{ secrets.PROJECT_ACCESS_TOKEN }}
